refactor: revert `protobuf` (#206)
* Revert "docs: update diagram"

This reverts commit 6f9cf5fbf7d7499c407db7951752f165fc162b29.

* Revert "Replace `jsonl` with `bomi`"

This reverts commit f715b3b821ac49ef7c5c8c34f1a2d3049765b6b4.

* Revert "docs: update diagram"

This reverts commit ba717608bd49e22b1aeeedef19ce89829a271c72.

* Revert "refactor: use protobuf instead of `jsonl` (#204)"

This reverts commit bd1fc21c4d183ae430318eb63cd0430d673a6200.