@@ -3,11 +3,13 @@ package io.github.algomaster99.terminator.index;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import io.github.algomaster99.terminator.commons.fingerprint.ParsingHelper;
-import io.github.algomaster99.terminator.commons.fingerprint.protobuf.Bomi;
-import io.github.algomaster99.terminator.commons.fingerprint.protobuf.ClassFile;
+import io.github.algomaster99.terminator.commons.fingerprint.classfile.ClassFileAttributes;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.condition.EnabledIfSystemProperty;
 import org.junit.jupiter.api.io.TempDir;
@@ -21,11 +23,11 @@ class JdkIndexerTest {
         // act
         String[] argsFirst = {"jdk", "-o", indexFile.toString()};
         Index.main(argsFirst);
-        byte[] contentFirst = Files.readAllBytes(indexFile);
+        String contentFirst = Files.readString(indexFile);
 
         String[] argsSecond = {"jdk", "-i", indexFile.toString()};
         Index.main(argsSecond);
-        byte[] contentSecond = Files.readAllBytes(indexFile);
+        String contentSecond = Files.readString(indexFile);
 
         // assert
         assertThat(contentFirst).isEqualTo(contentSecond);
@@ -35,43 +37,56 @@ class JdkIndexerTest {
     @Test
     void jdk21_0_2_indexShouldBeReproducible_temurin(@TempDir Path tempDir) throws IOException {
         // arrange
-        Path actualIndex = tempDir.resolve("jdk.bomi");
-        Path expectedIndex = Path.of("src", "test", "resources", "jdk-index", "21.0.2-tem.bomi");
+        Path actualIndex = tempDir.resolve("jdk.jsonl");
+        Path expectedIndex = Path.of("src", "test", "resources", "jdk-index", "21.0.2-tem.jsonl");
 
         // act
         String[] args = {"jdk", "-o", actualIndex.toString()};
         Index.main(args);
 
         // assert
-        byte[] actual = Files.readAllBytes(actualIndex);
-        byte[] expected = Files.readAllBytes(expectedIndex);
+        List<String> actual = Files.readAllLines(actualIndex);
+        List<String> expected = Files.readAllLines(expectedIndex);
         assertThat(actual).isEqualTo(expected);
 
-        Bomi referenceProvenance = ParsingHelper.deserializeFingerprints(actualIndex);
-        for (ClassFile classFile : referenceProvenance.getClassFileList()) {
-            assertThat(classFile.getAttributeCount()).isEqualTo(1);
-        }
+        Map<String, Set<ClassFileAttributes>> referenceProvenance = ParsingHelper.deserializeFingerprints(actualIndex);
+        referenceProvenance.values().forEach(classFileAttributes -> assertThat(classFileAttributes.size())
+                .isEqualTo(1));
     }
 
     @EnabledIfSystemProperty(named = "java.vendor.version", matches = "Temurin-17\\.0\\.10\\+7")
     @Test
     void jdk17_0_10_indexShouldBeReproducibleAcrossMultiple_implementations(@TempDir Path tempDir) throws IOException {
         // arrange
-        Path actualIndex = tempDir.resolve("jdk.bomi");
-        Path expectedIndex = Path.of("src", "test", "resources", "jdk-index", "17.0.10-tem.bomi");
+        Path actualIndex = tempDir.resolve("jdk.jsonl");
+        Path expectedIndex = Path.of("src", "test", "resources", "jdk-index", "17.0.10-tem.jsonl");
 
         // act
         String[] args = {"jdk", "-o", actualIndex.toString()};
         Index.main(args);
 
         // assert
-        byte[] actual = Files.readAllBytes(actualIndex);
-        byte[] expected = Files.readAllBytes(expectedIndex);
-        assertThat(Bomi.parseFrom(actual)).isEqualTo(Bomi.parseFrom(expected));
+        List<String> actual = Files.readAllLines(actualIndex);
+        List<String> expected = Files.readAllLines(expectedIndex);
+        assertThat(actual).isEqualTo(expected);
 
-        Bomi referenceProvenance = ParsingHelper.deserializeFingerprints(actualIndex);
-        for (ClassFile classFile : referenceProvenance.getClassFileList()) {
-            assertThat(classFile.getAttributeCount()).isEqualTo(1);
-        }
+        Map<String, Set<ClassFileAttributes>> referenceProvenance = ParsingHelper.deserializeFingerprints(actualIndex);
+        referenceProvenance.values().forEach(classFileAttributes -> assertThat(classFileAttributes.size())
+                .isEqualTo(1));
+    }
+
+    @Test
+    void useMD5asAlgorithm(@TempDir Path tempDir) {
+        // arrange
+        Path indexFile = tempDir.resolve("jdk.json");
+
+        // act
+        String[] args = {"jdk", "-o", indexFile.toString(), "--algorithm", "MD5"};
+        Index.main(args);
+
+        // assert
+        Map<String, Set<ClassFileAttributes>> referenceProvenance = ParsingHelper.deserializeFingerprints(indexFile);
+        referenceProvenance.forEach((key, value) ->
+                assertThat(value.stream().findAny().get().algorithm()).isEqualTo("MD5"));
     }
 }
